--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 <body>
     <header>
         <nav>
-            <a class="logo" href=""></a>
-            <p class="site">meu site</p>
+            <div class="desenho">
+                <img class="logo 2.0"src="imagens/logo 2.0.png" >
+                <h1 class="txt">Dilícias</h1>
+            </div>    
+    
             <ul>
                 <li>
-                    <a href="">Home</a>
+                    <a href="file:///C:/Users/GiovanaFernandes/Desktop/web/navbar/index.html">Home</a>
                 </li>
                 <li>
-                    <a href="">Sobre</a>
+                    <a href="file:///C:/Users/GiovanaFernandes/Desktop/web/navbar/cardapio.html">Cardápio</a>
                 </li>
                 <li>
                     <a href="">Produtos</a>
@@ -25,11 +28,46 @@
                 <li>
                     <a href="">Contato</a>
                 </li>
+                <li>
+                    <a href="">Quem somos</a>
+                </li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>bla bla bla...</h1>
+        <img  class="pimagem" src="imagens/pizza.png" >
+        <br>
+        <br>
+        <br>
+        <br>
+
+
+        <h1
+    style="font-size: 35px; color: #973961;"
+    >Reservas </h1>
+    <br>
+    <div class="arear">
+        <img src="imagens/jason-leung-poI7DelFiVA-unsplash.jpg"style="width: 500px; height:350px;" class = "reserva" >
+        <img src="imagens/kevin-curtis-QlnUpMED6Qs-unsplash.jpg" style="width: 500px; height:350px;" class="reserva">
+    </div>
+    <br>
+    <br>
+    <br>
+
+    <h1
+    style="font-size: 35px; color: #973961;"
+    >Lançamentos </h1>
+    <br>
+    <div class="pratos">
+        <img src="imagens/comida1.jpg" style="width: 300px;height: 205px;" class="comida">
+        <img src="imagens/comida2.jpg" style="width: 300px;height: 205px;" class="comida">
+        <img src="imagens/comida3.jpg" style="width: 300px;height: 205px;" class="comida">
+        <img src="imagens/comida4.jpg" style="width: 300px;height: 205px;" class="comida">
+        <img src="imagens/comida5.jpg" style="width: 300px;height: 205px;" class="comida">
+        <img src="imagens/comida6.jpg" style="width: 300px;height: 205px;" class="comida">
+    </div>
+
     </main>
+
 </body>
 </html>
